# Nexus-Agent-project

./: .env.example  .gitignore  Dockerfile  README.md  diagnose.sh  docker-compose.yml  init.sql  pyproject.toml  restart.sh  start.sh  start_vllm.sh
app/: celery_app.py  config.py  main.py
app/api/v1/: __init__.py  agent.py  auth.py  chat.py  deps.py  knowledge.py  sessions.py
app/core/: cache.py  chunker.py  database.py  security.py
app/services/: agent_service.py  llm_service.py  memory_service.py  query_rewrite_service.py  rag_service.py  reranker.py  tools.py
app/tasks/: document.py
static/: index.html
tests/: conftest.py  test_agent.py  test_chat.py
